<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="stock_list_ordering">
        <!--<item>Sem ordenação</item>-->
        <item>Ordem alfabética</item>
        <item>Ordem crescente de stock</item>
        <item>Ordem decrescente de stock</item>
    </string-array>

    <!--ESTES DOIS ARRAYS ESTÃO REPETIDOS!!!-->
    <!--QUANDO SE ADICIONA UMA NOVA CATEGORIA, ADICIONAR AOS DOIS ARRAYS!-->

    <string-array name="products_category">
        <item>Legumes</item>
        <item>Café</item>
        <item>Massas</item>
        <item>Higiene</item>
        <item>Enlatados</item>
        <item>Frutas</item>
    </string-array>

    <string-array name="products_category_to_sort">
        <item>Todos</item>
        <item>Legumes</item>
        <item>Café</item>
        <item>Massas</item>
        <item>Higiene</item>
        <item>Enlatados</item>
        <item>Frutas</item>
    </string-array>

    <string name="app_name">SmartHome</string>
    <string name="kitchen">Cozinha</string>
    <string name="outside_general">Exterior/Geral</string>
    <string name="living_room">Sala de Estar</string>
    <string name="bedroom">Quarto</string>
    <string name="choose_room">Mudar de divisão...</string>
    <string name="refresh_fragment_str">Actualizar fragmento</string>
    <string name="help_str">Ajuda</string>
    <string name="about_str">Acerca</string>
    <string name="reconnect_str">Ligar ao servidor</string>
    <string name="disable_loc_str">Desactivar localização</string>

    <string name="add_new_product">Adicionar novo produto...</string>
    <string name="clear_updated_products">Limpar produtos actualizados</string>
    <string name="new_prod_hint">Introduza o nome do producto</string>
    <string name="text_info_change_order">Alterar ordenação da lista: </string>
    <string name="text_info_remove">Tem a certeza que pretende remover o produto: </string>



    <!-- Content Description -->
    <!--nao sei para que serve mas fica-->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>
